packages/components/pie-notification/src/notification.scss
@use '@justeattakeaway/pie-css/scss' as p;
@use '@justeattakeaway/pie-css/scss/settings' as *;

:host {
    display: block;
}

.c-notification {
    --notification-border-radius: var(--dt-radius-rounded-c);
    --notification-background-color: var(--dt-color-container-subtle);
    --notification-direction: column;
    --notification-heading-font-family: var(--dt-font-heading-s-family);
    --notification-heading-font-size: #{p.font-size(--dt-font-heading-s-size--narrow)};
    --notification-heading-line-height: #{p.line-height(--dt-font-heading-s-line-height--narrow)};
    --notification-heading-font-weight: var(--dt-font-heading-s-weight);
    --notification-font-family: var(--dt-font-body-l-family);
    --notification-font-size: #{p.font-size(--dt-font-body-l-size)};
    --notification-line-height: #{p.line-height(--dt-font-body-l-line-height)};
    --notification-font-weight: var(--dt-font-body-l-weight);
    --notification-close-icon-offset: var(--dt-spacing-b);
    --notification-icon-fill: var(--dt-color-content-inverse);
    --notification-icon-background-color: var(--dt-color-container-inverse);
    --notification-icon-padding: var(--dt-spacing-a);
    --notification-close-button-size: 40px;
    --icon-size-override: 24px;

    padding: var(--dt-spacing-d);
    border-radius: var(--notification-border-radius);
    background-color: var(--notification-background-color);
    position: relative;
    display: flex;
    flex-direction: var(--notification-direction);
    gap: var(--dt-spacing-d);
    font-family: var(--notification-font-family);
    font-size: var(--notification-font-size);
    line-height: var(--notification-line-height);
    font-weight: var(--notification-font-weight);
    color: var(--dt-color-content-default);

    &.is-compact {
        --notification-direction: row;
    }

    &.c-notification--full-width {
        --notification-border-radius: var(--dt-radius-rounded-none);
    }

    &.c-notification--neutral-alternative {
        --notification-background-color: var(--dt-color-container-default);
    }

    &.c-notification--info {
        --notification-background-color: var(--dt-color-support-info-tonal);
        --notification-icon-background-color: var(--dt-color-support-info);
    }

    &.c-notification--success {
        --notification-background-color: var(--dt-color-support-positive-tonal);
        --notification-icon-background-color: var(--dt-color-support-positive);
    }

    &.c-notification--warning {
        --notification-background-color: var(--dt-color-support-warning-tonal);
        --notification-icon-background-color: var(--dt-color-support-warning);
        --notification-icon-fill: var(--dt-color-content-dark);
    }

    &.c-notification--error {
        --notification-background-color: var(--dt-color-support-error-tonal);
        --notification-icon-background-color: var(--dt-color-support-error);
        --notification-icon-fill: var(--dt-color-content-light);
    }

     &.c-notification--translucent {
        --notification-background-color: var(--dt-color-container-prominent);

        backdrop-filter: blur(var(--dt-blur-prominent));

    }

    &.c-notification--small {
        --notification-heading-font-family: var(--dt-font-heading-xs-family);
        --notification-heading-font-size: #{p.font-size(--dt-font-heading-xs-size--narrow)};
        --notification-heading-line-height: #{p.line-height(--dt-font-heading-xs-line-height--narrow)};
        --notification-heading-font-weight: var(--dt-font-heading-xs-weight);
        --notification-font-family: var(--dt-font-body-s-family);
        --notification-font-size: #{p.font-size(--dt-font-body-s-size)};
        --notification-line-height: #{p.line-height(--dt-font-body-s-line-height)};
        --notification-font-weight: var(--dt-font-body-s-weight);
        --notification-close-icon-offset: var(--dt-spacing-a-small);
        --notification-close-button-size: 32px;
        --notification-icon-padding: var(--dt-spacing-a-small);
        --icon-size-override: 20px;

        padding: var(--dt-spacing-b);
        gap: var(--dt-spacing-b);
        max-width: 360px;
    }


    &-heading {
        margin: 0;
        margin-block-end: var(--dt-spacing-a);
        font-family: var(--notification-heading-font-family);
        font-size: var(--notification-heading-font-size);
        line-height: var(--notification-heading-line-height);
        font-weight: var(--notification-heading-font-weight);

        @include media('>md') {
            --notification-heading-font-size: #{p.font-size(--dt-font-heading-s-size--wide)};
            --notification-heading-line-height: #{p.line-height(--dt-font-heading-s-line-height--wide)};
        }
    }

    &.c-notification--small &-heading {
        @include media('>md') {
            --notification-heading-font-size: #{p.font-size(--dt-font-heading-xs-size--narrow)};
            --notification-heading-line-height: #{p.line-height(--dt-font-heading-xs-line-height--narrow)};
        }
    }

    &.c-notification--small.is-compact &-content-section {
        flex: 1;
        min-width: 0;
    }

    &.c-notification--small &-footer {
        align-items: center;
    }

    &.c-notification--small &-footer.is-compact {
        align-self: stretch;
        align-items: center;
        padding-inline-start: var(--dt-spacing-b);
    }

    &-content-section {
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: var(--dt-spacing-c);

        &.is-dismissible {
            max-width: calc(100% - var(--notification-close-icon-offset) - var(--notification-close-button-size));
        }
    }

    &-icon-close {
        position: absolute;
        inset-block-start: var(--notification-close-icon-offset);
        inset-inline-end: var(--notification-close-icon-offset);
    }

    &-footer {
        display: flex;
        flex-direction: row;
        justify-content: flex-end;
        gap: var(--dt-spacing-d);

        &.is-compact {
            align-self: center;
            margin-inline-start: auto;
        }

        &.c-notification-footer--stacked {
            @include media('<md') {
                flex-direction: column-reverse;
            }

            @include media('>=md') {
                > pie-button {
                    width: auto;
                }
            }
        }
    }
}

.icon,
::slotted([slot="icon"]) {
    display: inline-flex;
    align-self: flex-start;
    background-color: var(--notification-icon-background-color);
    color: var(--notification-icon-fill);
    border-radius: var(--dt-radius-rounded-b);
    padding: var(--notification-icon-padding);
}

